# pyuptimerobot

./: .coveragerc  .devcontainer.json  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  example.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot_instructions.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md
.github/workflows/: actions.yml  release-drafter.yml  release.yml
pyuptimerobot/: __init__.py  const.py  decorator.py  exceptions.py  models.py  uptimerobot.py
scripts/: coverage  help  lint  lint-check  motd  setup
tests/: __init__.py  common.py  conftest.py  test_async_edit_monitor.py  test_async_get_account_details.py  test_async_get_monitors.py  test_issues.py  test_models.py
tests/fixtures/: bad_api_key.json  editMonitor.json  getAccountDetails.json  getMonitors.json  missing_api_key.json
