[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyuptimerobot"
version = "0"
description = "Python API wrapper for Uptime Robot."
authors = [
    {name = "Joakim Sorensen", email = "hi@ludeeus.dev"},
]
maintainers = [
    {name = "Joakim Sorensen", email = "hi@ludeeus.dev"},
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["homeassistant", "version", "update"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.13.0"
dependencies = [
    "aiohttp>=3.6.1,<4.0",
]

[project.urls]
Repository = "https://github.com/ludeeus/pyuptimerobot"

[project.optional-dependencies]
dev = [
    "aresponses==2.1.6",
    "black==25.1.0",
    "isort==6.0.1",
    "mypy==1.16.0",
    "pre-commit==2.21.0",
    "pytest==8.4.1",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.2.1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.isort]
combine_as_imports = true
force_sort_within_sections = true
profile = "black"

[tool.coverage.run]
source = ["pyuptimerobot"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]

[tool.hatch.build.targets.wheel]
packages = ["pyuptimerobot"]
